[package]
name = "wikipedia"
version = "0.2.0"
authors = ["Yusuf Irwandi <yusuf.chapterzero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
percent-encoding = "2.1.0"
log = "0.4"
hyper = "0.13"
hyper-tls = "0.4"
hyper-proxy = "0.6"
http = "0.2"
bytes = "0.5"
tokio = "0.2"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
typed-headers = "0.2"

[dev-dependencies]
env_logger = "0.7"
